# firmware-sensor-simulator

./: .gitignore  CMakeLists.txt  README.md
hil/: hil_test.py  requirements.txt  simple_test.py
src/: main.cpp  sensor.cpp  sensor.h  serial_interface.cpp  serial_interface.h
test/: test_sensor.cpp  test_serial.cpp
